...
    <string name="app_language_text">Tap to change app language</string>
    <string name="icon_app_language">App language icon</string>
    <string name="update_frequency_hour">An hour</string>
    <string name="update_frequency_day">A day</string>
    <string name="font_weight_light">Light</string>
    <string name="font_weight_normal">Normal</string>
    <string name="font_weight_bold">Bold</string>
    <string name="icon_go_back">Icon go back</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_text_angle">Tilt</string>
    <string name="title_text_radius">Curve</string>
    <string name="title_shadow">Shadow</string>
    <string name="date_example_two">Sat\nSep\n16</string>
...
